# CoffEEEbot

./: README.md
CoffEEEbot iPad Application/: IdentifyViewController.swift
CoffEEEbot iPad Application/CoffEEEbot/: AppDelegate.swift  CoffEEEbot-Bridging-Header.h  Coffee.swift  Instruction.swift  InstructionsViewController.swift  NewCustomerViewController.swift  RBManager.m  RememberViewController.swift  ResponseCell.swift  SetupViewController.swift  ViewController.swift  question_msg.swift
CoffEEEbot iPad Application/CoffEEEbot Stage 1.xcodeproj/: project.pbxproj
CoffEEEbot iPad Application/CoffEEEbot Stage 1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CoffEEEbot iPad Application/CoffEEEbot/Base.lproj/: Main.storyboard
CoffEEEbot iPad Application/CoffEEEbotTests/: CoffEEEbotTests.swift
CoffEEEbot iPad Application/CoffEEEbotUITests/: CoffEEEbotUITests.swift
CoffEEEbot iPad Application/animation/: happy_idle.dae
catkin_ws/devel/: _setup_util.py  setup.sh
catkin_ws/src/: dialogue.launch
catkin_ws/src/launch/: package.xml
catkin_ws/src/pocketsphinx/: CMakeLists.txt  speech.launch
catkin_ws/src/pocketsphinx/demo/: dialogue.corpus  dialogue.dic  dialogue.launch  dialogue.lm
catkin_ws/src/pocketsphinx/nodes/: dialogue.dic  dialogue.lm  text_to_ans.py
catkin_ws/src/recommender/: CMakeLists.txt  package.xml
catkin_ws/src/state_machine/: CMakeLists.txt  state_machine.launch
catkin_ws/src/test/: CMakeLists.txt  package.xml
catkin_ws/src/test/msg/: Trx.msg
catkin_ws/src/test/src/: publisher.py  subscriber.py
(+301 files in other folders)
